# zuspec-langserver

./: .env  .gitignore  CMakeLists.txt  README.md  ivpm.yaml  package.json  setup.py  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
doc/: Features.md  TheoryOps.md
python/: core.pyx
python/zsp_ls/: core.pxd  decl.pxd
scripts/: build_linux.sh
src/: CMakeLists.txt  Context.cpp  Context.h  Factory.cpp  Factory.h  Server.cpp  Server.h  SourceFileCollection.cpp  SourceFileCollection.h  SourceFileData.cpp  SourceFileData.h  SourceFileFinder.cpp  SourceFileFinder.h  TaskBuildDocumentSymbols.cpp  TaskBuildDocumentSymbols.h  TaskDeclaration.cpp  TaskDeclaration.h  TaskDidChange.cpp  TaskDidChange.h  TaskDidClose.cpp  TaskDidClose.h  TaskDidOpen.cpp  TaskDidOpen.h  TaskDidSave.cpp  TaskDidSave.h  TaskDocumentSymbols.cpp  TaskDocumentSymbols.h  TaskFindSourceFiles.cpp  TaskFindSourceFiles.h  TaskHover.cpp  TaskHover.h  TaskLinkAst.cpp  TaskLinkAst.h  TaskPublishDiagnostics.cpp  TaskPublishDiagnostics.h  TaskRefreshRootSymtab.cpp  TaskRefreshRootSymtab.h  TaskUpdateAllSourceFiles.cpp  TaskUpdateAllSourceFiles.h  TaskUpdateDiskSymtab.cpp  (+10 more)
src/include/zsp/ls/: FactoryExt.h  IFactory.h  IThreadMain.h
tests/: CMakeLists.txt  test_smoke.py  util.py
tests/src/: TaskSchedulerFixture.cpp  TaskSchedulerFixture.h  TestBase.cpp  TestBase.h  TestClient.cpp  TestClient.h  TestInitialize.cpp  TestInitialize.h  TestOpenChange.cpp  TestOpenChange.h  TestSourceFileFinder.cpp  TestSourceFileFinder.h  TestTaskBase.cpp  TestTaskBase.h  TestTaskDeclaration.cpp  TestTaskDeclaration.h  TestTaskScheduler.cpp  TestTaskScheduler.h  TestWorkspaceStartup.cpp  TestWorkspaceStartup.h  TextUtil.cpp  TextUtil.h
vscode/zuspec-langserver/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
vscode/zuspec-langserver/src/: extension.ts
